--- a/PrivacyFriendlyCameraRuler/app/src/main/res/values-lv/strings.xml
+++ b/PrivacyFriendlyCameraRuler/app/src/main/res/values-lv/strings.xml
@@ -1,11 +1,11 @@
 <resources>
-    <string name="app_name">Lineāls</string>
+    <string name="app_name">Fotolineāls</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
 
-    <string name="app_name_long">Privacy Friendly Lineāls</string>
+    <string name="app_name_long">Privacy Friendly Fotolineāls</string>
     <string name="version_number">Versija 1.0</string>
 
 
