--- a/PrivacyFriendlyCameraRuler/app/src/main/res/values-ru/strings.xml
+++ b/PrivacyFriendlyCameraRuler/app/src/main/res/values-ru/strings.xml
@@ -1,11 +1,11 @@
 <resources>
-    <string name="app_name">Линейка</string>
+    <string name="app_name">Фотолинейка</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
 
-    <string name="app_name_long">Privacy Friendly Линейка</string>
+    <string name="app_name_long">Privacy Friendly Фотолинейка</string>
     <string name="version_number">Версия 1.0</string>
 
 
