--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,12 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <!-- ###RULER### -->
+    <string name="screen_ruler">Screen Ruler</string>
+    <string name="action_calibration">Calibrate</string>
+    <string name="action_reset_calibration">Reset Calibration</string>
+
+    <!-- ###RULER### -->
+    <string name="camera_ruler">Camera Ruler</string>
 
     <!-- ###CALIBRATION### -->
     <string name="measureLineHeading">1. Measure</string>
@@ -29,37 +35,23 @@
     <string name="noInput">Please input the length of the line.</string>
     <string name="calibrationDone">Calibration finished.</string>
 
-    <!-- ###MAIN### -->
-    <string name="main_button_text">Full Width Button</string>
-    <string name="main_button_disabled_text">Inactive Button</string>
-    <string name="main_button_1">1</string>
-    <string name="main_button_2">2</string>
-    <string name="main_button_3">3</string>
-    <string name="main_button_4">4</string>
-    <string name="main_button_5">5</string>
-    <string name="main_text_fullwithbutton_desc">A button that uses the full width of the screen looks like this:</string>
-    <string name="main_text_disabledbutton_desc">A disabled button looks like this (any size):</string>
-    <string name="main_text_title">This is an example app to demonstrate the design of a Privacy Friendly App. Further explanations can be found in the Privacy Friendly App Guide.</string>
-    <string name="main_text_normalbutton_desc">There are multiple ways to display basic buttons. Button 1 is the basic button. If you wish to separate a button visually, use button 2. The buttons 3&#8211;5 are examples for highlighted buttons. Depending on the app other colors are possible.</string>
-    <string name="main_button_welcomedialog_text">Use the button in the lower left corner to call the Welcome Dialog.</string>
-
-    <!-- ###GAME###-->
-    <string name="title_activity_game">Game</string>
-    <string name="game_button_start">New Game</string>
-    <string name="game_button_continue">Continue Game</string>
-    <string name="game_desc">This is the default main menu for game apps. The viewpager above should be used to switch between game modes.</string>
-
     <!--###HELP###-->
     <string name="help">Help</string>
     <string name="help_overview_heading">Overview</string>
-    <string name="help_example">Example Help Entry</string>
-    <string name="help_category_example">Example Help Category</string>
+    <string name="help_calibration">Manual Calibration</string>
+    <string name="help_disclaimer">Disclaimer</string>
+    <string name="help_category_calibration">Calibration</string>
+    <string name="pref_calibration_summary">You can manually calibrate the ruler via the "calibrate" option in the action menu.</string>
+    <string name="pref_disclaimer_summary">This app is not a professionally calibrated measuring device. Technische Universität Darmstadt is not liable for any damage caused by use of this app.</string>
     <string name="help_privacy_heading">Privacy Info</string>
-    <string name="help_permissionXY_heading">Permission XY</string>
-    <string name="help_permissionXY_description">is needed because &#8230; If XY is not granted feature YZ is not usable.</string>
     <string name="help_permissions_heading">Permissions</string>
-    <string name="help_permissions_description">Privacy Friendly Example does not use any permissions.</string>
-    <string name="help_intro">This app shows the basic design of Privacy Friendly Apps. The functionality of the app should be introduced with 1 to 2 sentences in this section.</string>
+    <string name="help_permissions_description">Privacy Friendly Ruler does not use any permissions.</string>
+    <string name="help_category_options">Settings</string>
+    <string name="help_units">Units of Measurement</string>
+    <string name="pref_units_summary">You can display a cm ruler, an inch ruler or no ruler on the left and on the right side of the screen. Both rulers can be set separately in the option menu.</string>
+    <string name="help_angles">Angle Measure</string>
+    <string name="pref_angles_summary">You can display an angle measure in degrees or radian on the left side of the screen.</string>
+    <string name="help_intro">The Privacy Friendly Ruler App turns Your Phone into a ruler for quick on the fly measurements.</string>
 
     <!--###ABOUT###-->
     <string name="about">About</string>
@@ -74,17 +66,57 @@
     <string name="url" translatable="false"><a href="https://www.secuso.org/pfa">SECUSO-Website</a></string>
 
     <!-- ###SETTINGS### -->
-    <string name="title_activity_settings">Settings</string>
-    <string name="pref_header_general">General</string>
-    <string name="pref_example_switch">Example Switch</string>
-    <string name="pref_example_switch_summary">Example Switch Summary</string>
-    <string name="pref_example_summary">Example Summary</string>
+    <string name="title_activity_settings">Settings</string><string name="pref_ruler">Ruler Settings</string>
+    <string name="pref_leftruler">Left Ruler</string>
+    <string name="pref_leftruler_verbose">What should be displayed on left ruler?</string>
+    <string-array name="pref_leftruler_entries">
+        <item>cm</item>
+        <item>inch</item>
+        <item>off</item>
+    </string-array>
+    <string-array name="pref_leftruler_evs">
+        <item>cm</item>
+        <item>inch</item>
+        <item>off</item>
+    </string-array>
+    <string name="pref_leftruler_default">cm</string>
+    <string name="pref_rightruler">Right Ruler</string>
+    <string name="pref_rightruler_verbose">What should be displayed on right ruler?</string>
+    <string-array name="pref_rightruler_entries">
+        <item>cm</item>
+        <item>inch</item>
+        <item>off</item>
+    </string-array>
+    <string-array name="pref_rightruler_evs">
+        <item>cm</item>
+        <item>inch</item>
+        <item>off</item>
+    </string-array>
+    <string name="pref_rightruler_default">inch</string>
+    <string name="pref_anglemeasure">Angle Measure</string>
+    <string name="pref_anglemeasure_verbose">Turn on scale for angle measuring?</string>
+    <string-array name="pref_anglemeasure_entries">
+        <item>degree</item>
+        <item>radian</item>
+        <item>off</item>
+    </string-array>
+    <string-array name="pref_anglemeasure_evs">
+        <item>degree</item>
+        <item>radian</item>
+        <item>off</item>
+    </string-array>
+    <string name="pref_anglemeasure_default">off</string>
 
     <!-- ### WELCOME DIALOG ### -->
-    <string name="welcome_text">This App serves as a guideline to see the basic design of Privacy Friendly Apps. The sourcecode is available at GitHub. For further explanations have a look at the Privacy Friendly App Guide.\n\nThe welcome screen should introduce the app and the key elements of the start page.</string>
     <string name="welcome">Welcome</string>
+    <string name="field_select_description_headline">Welcome to Privacy Friendly Ruler</string>
+    <string name="field_select_description">This app provides rulers and angle measures on Your screen.</string>
+    <string name="difficulty_description_headline">Settings</string>
+    <string name="difficulty_description">You can change the units of measurement in the settings. In the action menu You can calibrate the ruler (optional).</string>
+    <string name="disclaimer">This App is not a professionally calibrated measuring device. This App can be manually calibrated which may minimize the error. However, depending on the device there still could be rounding errors.</string>
+    <string name="disclaimer_check">I have read the disclaimer about potential rounding issues.</string>
+    <string name="disclaimer_check_toast">Please check that you have read the disclaimer.</string>
     <string name="okay">Okay</string>
-    <string name="viewhelp">View Help</string>
-    <string name="main_button_welcomedialog">Show Welcome</string>
+    <string name="view_help">View Help</string>
 
 </resources>
