--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,8 +19,10 @@
     <string name="action_calibration">Calibrate</string>
     <string name="action_reset_calibration">Reset Calibration</string>
 
-    <!-- ###RULER### -->
+    <!-- ###CAMERA### -->
     <string name="camera_ruler">Camera Ruler</string>
+    <string name="camera_crash">Camera App crashed.</string>
+    <string name="gallery_crash">Gallery App crashed.</string>
 
     <!-- ###CALIBRATION### -->
     <string name="measureLineHeading">1. Measure</string>
