Floating action menu and shapes classes. Added a floating action menu with four buttons for adding a new measurement shape to the canvas. Made an abstract class Shape with four subclasses to represent shapes to draw on the canvas.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,6 +23,10 @@
     <string name="camera_ruler">Camera Ruler</string>
     <string name="camera_crash">Camera App crashed.</string>
     <string name="gallery_crash">Gallery App crashed.</string>
+    <string name="new_tetragon">New Tetragon</string>
+    <string name="new_triangle">New Triangle</string>
+    <string name="new_circle">New Circle</string>
+    <string name="new_line">New Line</string>
 
     <!-- ###CALIBRATION### -->
     <string name="measureLineHeading">1. Measure</string>
