--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -1,70 +1,128 @@
 <resources>
-    <string name="app_name">Beispiel</string>
-    <string name="app_name_long">Privacy Friendly Beispiel</string>
+    <string name="app_name">Camera Ruler</string>
+    <string name="app_name_long">Privacy Friendly Camera Ruler</string>
 
     <!-- ###DRAWER###-->
-    <string name="action_help">Hilfe</string>
-    <string name="action_about">Über</string>
-    <string name="action_settings">Einstellungen</string>
-    <string name="action_main">Hauptmenü</string>
-    <string name="action_game">Spiel</string>
+    <string name="action_ruler">Screen Ruler</string>
+    <string name="action_camera">Camera Ruler</string>
+    <string name="action_help">Help</string>
+    <string name="action_about">About</string>
+    <string name="action_settings">Settings</string>
+    <string name="action_main">Main</string>
+    <string name="action_game">Game</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
-    <!-- ###MAIN### -->
-    <string name="main_button_text">Button volle Breite</string>
-    <string name="main_button_disabled_text">Inaktiver Button</string>
-    <string name="main_button_1">1</string>
-    <string name="main_button_2">2</string>
-    <string name="main_button_3">3</string>
-    <string name="main_button_4">4</string>
-    <string name="main_button_5">5</string>
-    <string name="main_text_fullwithbutton_desc">Ein Button mit voller breite sieht folgendermaßen aus:</string>
-    <string name="main_text_disabledbutton_desc">Ein inaktiver Button sieht folgendermaßen aus (jede Größe):</string>
-    <string name="main_text_title">Das hier ist eine Beispiel-App zum das Design der Privacy Friendly Apps zu demonstrieren. Weitere Infos gibt es im Privacy Friendly App Guide.</string>
-    <string name="main_text_normalbutton_desc">Es gibt verschiedene Möglichkeiten, um einfache Buttons darzustellen. Button 1 entspricht der Basisform. Wenn Buttons visual abgetrennt werden sollen, ist Button 2 zu verwenden. Die Buttons 3&#8211;5 sind Beispiels für hevorgehobene Buttons. Je nach App können auch andere Farben zum Highlighten verwendet werden.</string>
-    <string name="main_button_welcomedialog_text">Der Button in der Ecke unten links öffnet einen Beispiel-Welcome Dialog.</string>
+    <!-- ###RULER### -->
+    <string name="screen_ruler">Screen Ruler</string>
+    <string name="action_calibration">Calibrate</string>
+    <string name="action_reset_calibration">Reset Calibration</string>
 
-    <!-- ###GAME###-->
-    <string name="title_activity_game">Spiel</string>
-    <string name="game_button_start">Neues Spiel</string>
-    <string name="game_button_continue">Spiel fortsetzen</string>
-    <string name="game_desc">Dies ist das Standard-Menü für Spiele-Apps. Der Viewpager oben sollte verwendet werden, um zwischen verschiedenen Spielmodi zu wechseln.</string>
+    <!-- ###CAMERA### -->
+    <string name="camera_ruler">Camera Ruler</string>
+    <string name="camera_crash">Camera App crashed.</string>
+    <string name="gallery_crash">Gallery App crashed.</string>
+    <string name="new_tetragon">New Tetragon</string>
+    <string name="new_triangle">New Triangle</string>
+    <string name="new_circle">New Circle</string>
+    <string name="new_line">New Line</string>
+
+    <!-- ###CALIBRATION### -->
+    <string name="measureLineHeading">1. Measure</string>
+    <string name="measureLine">Please measure the length of the line below as precisely as possible.</string>
+    <string name="headingEnter">2. Enter Measured Length</string>
+    <string name="calibrationMM">mm</string>
+    <string name="calibrationInch">inch</string>
+    <string name="calibrateConfirmButton">Calibrate</string>
+    <string name="calibrationWarning">Manual calibration does not eliminate inaccuracies due to rounding.
+        Do not use this app as a professionally calibrated measuring device.</string>
+    <string name="calibrate">Calibrate</string>
+    <string name="noInput">Please input the length of the line.</string>
+    <string name="calibrationDone">Calibration finished.</string>
 
     <!--###HELP###-->
-    <string name="help">Hilfe</string>
-    <string name="help_overview_heading">Übersicht</string>
-    <string name="help_example">Beispiel Hilfe-Eintrag</string>
-    <string name="help_category_example">Beispiel Hilfe-Kategorie</string>
-    <string name="help_privacy_heading">Datenschutzinfo</string>
-    <string name="help_permissionXY_heading">Berechtigung XY</string>
-    <string name="help_permissionXY_description">wird benötigt um &#8230; Hier auch erklären, was passiert, wenn diese Berechtigung entzogen wird.</string>
-    <string name="help_permissions_heading">Berechtigungen</string>
-    <string name="help_permissions_description">Privacy Friendly Beispiel verwendet keine Berechtigungen. </string>
-    <string name="help_intro">Diese app demonstriert das Basis-Design einer Privacy Friendly App. Die Funktionalität der App sollte in 1 bis 2 Sätzen erklärt werden.</string>
+    <string name="help">Help</string>
+    <string name="help_overview_heading">Overview</string>
+    <string name="help_calibration">Manual Calibration</string>
+    <string name="help_disclaimer">Disclaimer</string>
+    <string name="help_category_calibration">Calibration</string>
+    <string name="pref_calibration_summary">You can manually calibrate the ruler via the "calibrate" option in the action menu.</string>
+    <string name="pref_disclaimer_summary">This app is not a professionally calibrated measuring device. Technische Universität Darmstadt is not liable for any damage caused by use of this app.</string>
+    <string name="help_privacy_heading">Privacy Info</string>
+    <string name="help_permissions_heading">Permissions</string>
+    <string name="help_permissions_description">Privacy Friendly Ruler does not use any permissions.</string>
+    <string name="help_category_options">Settings</string>
+    <string name="help_units">Units of Measurement</string>
+    <string name="pref_units_summary">You can display a cm ruler, an inch ruler or no ruler on the left and on the right side of the screen. Both rulers can be set separately in the option menu.</string>
+    <string name="help_angles">Angle Measure</string>
+    <string name="pref_angles_summary">You can display an angle measure in degrees or radian on the left side of the screen.</string>
+    <string name="help_intro">The Privacy Friendly Ruler App turns Your Phone into a ruler for quick on the fly measurements.</string>
 
     <!--###ABOUT###-->
-    <string name="about">Über</string>
-    <string name="version_number">Version 2.0</string>
-    <string name="about_author">Autoren: </string>
-    <string name="about_author_contributors">und Mitwirkende.</string>
-    <string name="about_affiliation">In Zusammenarbeit mit</string>
-    <string name="privacy_friendly">Diese App gehört zur Gruppe der Privacy Friendly Apps entwickelt von der Technischen Universität Darmstadt. Quelltext lizenziert unter GPLv3. Bilder copyright TU Darmstadt und Google Inc.</string>
-    <string name="more_info">Weitere Infos unter:</string>
+    <string name="about">About</string>
+    <string name="version_number">Version 1.0</string>
+    <string name="about_author">Authors: </string>
+    <string name="about_author_names" translatable="false">Roberts Kolosovs</string>
+    <string name="about_author_contributors">and contributors.</string>
+    <string name="about_affiliation">In affiliation with</string>
+    <string name="privacy_friendly">This application belongs to the group of Privacy Friendly Apps developed by Technische Universität Darmstadt. Sourcecode licensed under GPLv3. Images copyright TU Darmstadt and Google Inc.</string>
+    <string name="more_info">More information can be found on:</string>
+    <string name="github" translatable="false"><a href="https://github.com/SecUSo/privacy-friendly-camera-ruler">Github-Repo</a></string>
+    <string name="url" translatable="false"><a href="https://www.secuso.org/pfa">SECUSO-Website</a></string>
 
     <!-- ###SETTINGS### -->
-    <string name="title_activity_settings">Einstellungen</string>
-    <string name="pref_header_general">Allgemein</string>
-    <string name="pref_example_switch">Beispiel Switch</string>
-    <string name="pref_example_switch_summary">Beispiel Switch Summary</string>
-    <string name="pref_example_summary">Beispiel Summary</string>
+    <string name="title_activity_settings">Settings</string><string name="pref_ruler">Ruler Settings</string>
+    <string name="pref_leftruler">Left Ruler</string>
+    <string name="pref_leftruler_verbose">What should be displayed on left ruler?</string>
+    <string-array name="pref_leftruler_entries">
+        <item>cm</item>
+        <item>inch</item>
+        <item>off</item>
+    </string-array>
+    <string-array name="pref_leftruler_evs">
+        <item>cm</item>
+        <item>inch</item>
+        <item>off</item>
+    </string-array>
+    <string name="pref_leftruler_default">cm</string>
+    <string name="pref_rightruler">Right Ruler</string>
+    <string name="pref_rightruler_verbose">What should be displayed on right ruler?</string>
+    <string-array name="pref_rightruler_entries">
+        <item>cm</item>
+        <item>inch</item>
+        <item>off</item>
+    </string-array>
+    <string-array name="pref_rightruler_evs">
+        <item>cm</item>
+        <item>inch</item>
+        <item>off</item>
+    </string-array>
+    <string name="pref_rightruler_default">inch</string>
+    <string name="pref_anglemeasure">Angle Measure</string>
+    <string name="pref_anglemeasure_verbose">Turn on scale for angle measuring?</string>
+    <string-array name="pref_anglemeasure_entries">
+        <item>degree</item>
+        <item>radian</item>
+        <item>off</item>
+    </string-array>
+    <string-array name="pref_anglemeasure_evs">
+        <item>degree</item>
+        <item>radian</item>
+        <item>off</item>
+    </string-array>
+    <string name="pref_anglemeasure_default">off</string>
 
     <!-- ### WELCOME DIALOG ### -->
-    <string name="welcome_text">Diese App soll als Anleitung zum Design von Privacy Friendly Apps dienen. Ihr Quellcode ist auf GitHub verfügbar. Weitere Infos im Privacy Friendly App Guide. Im Welcome Dialog sollen Schlüsselfunktionalitäten der App vorgestellt werden.</string>
-    <string name="welcome">Willkommen</string>
+    <string name="welcome">Welcome</string>
+    <string name="field_select_description_headline">Welcome to Privacy Friendly Ruler</string>
+    <string name="field_select_description">This app provides rulers and angle measures on Your screen.</string>
+    <string name="difficulty_description_headline">Settings</string>
+    <string name="difficulty_description">You can change the units of measurement in the settings. In the action menu You can calibrate the ruler (optional).</string>
+    <string name="disclaimer">This App is not a professionally calibrated measuring device. This App can be manually calibrated which may minimize the error. However, depending on the device there still could be rounding errors.</string>
+    <string name="disclaimer_check">I have read the disclaimer about potential rounding issues.</string>
+    <string name="disclaimer_check_toast">Please check that you have read the disclaimer.</string>
     <string name="okay">Okay</string>
-    <string name="viewhelp">Hilfe</string>
-    <string name="main_button_welcomedialog">Willkommen</string>
+    <string name="view_help">View Help</string>
 
 </resources>
