Frame for reference object use. Moved area measurement texts to string values file. Added a variable tracking the current phase of the app via a Enum. Added a phase for reference object change and a button for confirming the reference object. Implemented all phase transitions: app_closed <- mode_choice <-> reference_object_choice <-> measurement.

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -124,5 +124,9 @@
     <string name="disclaimer_check_toast">Please check that you have read the disclaimer.</string>
     <string name="okay">Okay</string>
     <string name="view_help">View Help</string>
+    <string name="confrim_reference">Confirm Reference</string>
+    <string name="length">Length:</string>
+    <string name="area">Area:</string>
+    <string name="self_intersection_warning">Can\'t compute area of self-intersecting polygon.</string>
 
 </resources>
