--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,6 +27,10 @@
     <string name="new_triangle">New Triangle</string>
     <string name="new_circle">New Circle</string>
     <string name="new_line">New Line</string>
+    <string name="confrim_reference">Confirm Reference</string>
+    <string name="length">Length:</string>
+    <string name="area">Area:</string>
+    <string name="self_intersection_warning">Can\'t compute area of self-intersecting polygon.</string>
 
     <!-- ###CALIBRATION### -->
     <string name="measureLineHeading">1. Measure</string>
