--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -27,6 +27,10 @@
     <string name="new_triangle">New Triangle</string>
     <string name="new_circle">New Circle</string>
     <string name="new_line">New Line</string>
+    <string name="confrim_reference">Confirm Reference</string>
+    <string name="length">Length:</string>
+    <string name="area">Area:</string>
+    <string name="self_intersection_warning">Can\'t compute area of self-intersecting polygon.</string>
 
     <!-- ###CALIBRATION### -->
     <string name="measureLineHeading">1. Measure</string>
@@ -122,11 +126,20 @@
     <string name="disclaimer">This App is not a professionally calibrated measuring device. This App can be manually calibrated which may minimize the error. However, depending on the device there still could be rounding errors.</string>
     <string name="disclaimer_check">I have read the disclaimer about potential rounding issues.</string>
     <string name="disclaimer_check_toast">Please check that you have read the disclaimer.</string>
+
+    <!-- ### TUTORIAL SCREEN ### -->
+    <string name="slide1_heading">Welcome!</string>
+    <string name="slide1_text">This App serves as a guideline to see the basic design of Privacy Friendly Apps. Here introduce your app in one or two sentences.</string>
+
+    <string name="slide2_heading">Key Elements</string>
+    <string name="slide2_text">Introduce key elements of your app. Do not introduce too many details.</string>
+
+    <string name="slide3_heading">Github and Guide</string>
+    <string name="slide3_text">The sourcecode of this app is available at GitHub. For further explanations have a look at the Privacy Friendly App Guide.</string>
+
+    <string name="next">Next</string>
+    <string name="skip">Skip</string>
     <string name="okay">Okay</string>
     <string name="view_help">View Help</string>
-    <string name="confrim_reference">Confirm Reference</string>
-    <string name="length">Length:</string>
-    <string name="area">Area:</string>
-    <string name="self_intersection_warning">Can\'t compute area of self-intersecting polygon.</string>
 
 </resources>
