--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -117,15 +117,24 @@
     </string-array>
     <string name="pref_anglemeasure_default">off</string>
 
-    <!-- ### WELCOME DIALOG ### -->
-    <string name="welcome">Welcome</string>
-    <string name="field_select_description_headline">Welcome to Privacy Friendly Ruler</string>
-    <string name="field_select_description">This app provides rulers and angle measures on Your screen.</string>
-    <string name="difficulty_description_headline">Settings</string>
-    <string name="difficulty_description">You can change the units of measurement in the settings. In the action menu You can calibrate the ruler (optional).</string>
+    <!-- ### DISCLAIMER DIALOG ### -->
+    <string name="disclaimer_dialog_title">Disclaimer</string>
     <string name="disclaimer">This App is not a professionally calibrated measuring device. This App can be manually calibrated which may minimize the error. However, depending on the device there still could be rounding errors.</string>
     <string name="disclaimer_check">I have read the disclaimer about potential rounding issues.</string>
     <string name="disclaimer_check_toast">Please check that you have read the disclaimer.</string>
+
+    <!-- ### TUTORIAL SCREEN ### -->
+    <string name="slide1_heading">Welcome!</string>
+    <string name="slide1_text">This App serves as a guideline to see the basic design of Privacy Friendly Apps. Here introduce your app in one or two sentences.</string>
+
+    <string name="slide2_heading">Key Elements</string>
+    <string name="slide2_text">Introduce key elements of your app. Do not introduce too many details.</string>
+
+    <string name="slide3_heading">Github and Guide</string>
+    <string name="slide3_text">The sourcecode of this app is available at GitHub. For further explanations have a look at the Privacy Friendly App Guide.</string>
+
+    <string name="next">Next</string>
+    <string name="skip">Skip</string>
     <string name="okay">Okay</string>
     <string name="view_help">View Help</string>
 
