--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -149,5 +149,7 @@
     <string name="pref_type_selection">Reference Type Selection</string>
     <string name="pref_type_selection_verbose">What reference object types to use?</string>
     <string name="pref_type_selection_summary">Disable reference object categoreis you don\'t want to use.</string>
+    <string name="pref_edit_user_def_refs">Edit user defined references</string>
+    <string name="title_activity_ref_editor">Reference Editor</string>
 
 </resources>
