--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -103,18 +103,20 @@
     <string name="disclaimer_check_toast">Please check that you have read the disclaimer.</string>
 
     <!-- ### TUTORIAL SCREEN ### -->
-    <string name="slide1_heading">Welcome!</string>
-    <string name="slide1_text">This App serves as a guideline to see the basic design of Privacy Friendly Apps. Here introduce your app in one or two sentences.</string>
+    <string name="slide1_heading">Placeholder Heading 1</string>
+    <string name="slide1_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque ac eros at dui dignissim faucibus. Nunc cursus nisl vel vestibulum laoreet. Nunc iaculis felis enim, sit amet vulputate augue viverra a. Sed ultrices sem non elementum aliquet. Praesent tincidunt tempus blandit.</string>
 
-    <string name="slide2_heading">Key Elements</string>
-    <string name="slide2_text">Introduce key elements of your app. Do not introduce too many details.</string>
+    <string name="slide2_heading">Placeholder Heading 2</string>
+    <string name="slide2_text">Morbi dolor ex, sollicitudin sed vehicula eu, luctus quis massa. Phasellus libero ante, molestie at pellentesque ac, cursus a neque. Vestibulum nec placerat sem. Aenean interdum ligula a placerat euismod. Pellentesque lacinia facilisis turpis sit amet laoreet. Vivamus congue ligula a vulputate auctor. </string>
 
-    <string name="slide3_heading">Github and Guide</string>
-    <string name="slide3_text">The sourcecode of this app is available at GitHub. For further explanations have a look at the Privacy Friendly App Guide.</string>
+    <string name="slide3_heading">Placeholder Heading 3</string>
+    <string name="slide3_text">Etiam pulvinar hendrerit velit et sagittis. Integer maximus risus eget tincidunt consectetur. Nunc interdum, enim quis posuere ornare, neque magna dictum justo, sed maximus enim orci eu lacus. Maecenas blandit eleifend neque, non suscipit diam porttitor venenatis. Nam vel dui nec dolor dignissim vestibulum.</string>
 
     <string name="next">Next</string>
     <string name="skip">Skip</string>
     <string name="okay">Okay</string>
     <string name="view_help">View Help</string>
+    <string name="pref_edit_user_def_refs">Edit user defined references</string>
+    <string name="title_activity_ref_editor">Reference Editor</string>
 
 </resources>
