User defined reference objects list. Made a list to display user defined reference objects in. Clicks on list items launch a edit dialog. Converted edit activity into edit dialog. Adjusted the design. Adjusted function for buttons (buttons not yet working correctly).

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -151,5 +151,16 @@
     <string name="pref_type_selection_summary">Disable reference object categoreis you don\'t want to use.</string>
     <string name="pref_edit_user_def_refs">Edit user defined references</string>
     <string name="title_activity_ref_editor">Reference Editor</string>
+    <string name="title_activity_ref_viewer">User Defined References</string>
+    <string name="list_item">User Defined Reference Object</string>
+    <string name="edit_dialog_title">Edit Reference Object</string>
+    <string name="toast_input_failure">Invalid input.</string>
+    <string name="toast_delete_done">User set reference deleted.</string>
+    <string name="edit_name">Name:</string>
+    <string name="edit_shape">Shape:</string>
+    <string name="edit_line">Line</string>
+    <string name="edit_circle">Circle</string>
+    <string name="edit_tetragon">Tetragon</string>
+    <string name="edit_size">Size:</string>
 
 </resources>
