Edit dialog button styling and bug fixing in reference object list. Buttons in the edit dialog styled according to the PFA design. Fixed bugs in the handling of reference object selection menu. Now all buttons are filled with the proper reference objects with user defined active ones on top followed by predefined. Clicks on the buttons return the corresponding object and the topmost object in the list is set as the starting reference object and the appropriate shape is drawn on the screen.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -111,6 +111,8 @@
     <string name="edit_circle">Circle</string>
     <string name="edit_tetragon">Tetragon</string>
     <string name="edit_size">Size:</string>
+    <string name="cancel">Cancel</string>
+    <string name="delete">Delete</string>
 
     <!-- ### DISCLAIMER DIALOG ### -->
     <string name="disclaimer_dialog_title">Disclaimer</string>
