--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -162,5 +162,8 @@
     <string name="edit_circle">Circle</string>
     <string name="edit_tetragon">Tetragon</string>
     <string name="edit_size">Size:</string>
+    <string name="cancel">Cancel</string>
+    <string name="delete">Delete</string>
+    <string name="ok">OK</string>
 
 </resources>
