--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,6 +20,8 @@
     <string name="action_reset_calibration">Reset Calibration</string>
 
     <!-- ###CAMERA### -->
+    <string name="description_camera_gallery">Get a picture to measure. You can either take a picture with your camera or use a picture from your phones memory.</string>
+    <string name="reference_self_intersecting">The reference object must not self-intersect.</string>
     <string name="camera_ruler">Camera Ruler</string>
     <string name="camera_crash">Camera App crashed.</string>
     <string name="gallery_crash">Gallery App crashed.</string>
@@ -27,7 +29,7 @@
     <string name="new_triangle">New Triangle</string>
     <string name="new_circle">New Circle</string>
     <string name="new_line">New Line</string>
-    <string name="confrim_reference">Confirm Reference</string>
+    <string name="confirm_reference">Confirm Reference</string>
     <string name="length">Length:</string>
     <string name="area">Area:</string>
     <string name="self_intersection_warning">Can\'t compute area of self-intersecting polygon.</string>
@@ -143,6 +145,4 @@
     <string name="pref_uom_summary">You can set the units of measurements to be used in the screen ruler.</string>
     <string name="pref_ref_types_summary">You can disable certain types of predefined reference objects. They won\'t show up in the menu during reference object choice.</string>
     <string name="pref_ref_editor_summary">Here you can define and manage user defined reference objects (up to 10).</string>
-    <string name="description_camera_gallery">Get a picture to measure. You can either take a picture with your camera or use a picture from your phones memory.</string>
-    <string name="reference_self_intersecting">The reference object mustn\'t self-intersect.</string>
 </resources>
