--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -220,4 +220,6 @@
     <string name="pref_ref_types_summary">You can disable certain types of predefined reference objects. They won\'t show up in the menu during reference object choice.</string>
     <string name="pref_ref_editor_summary">Here you can define and manage user defined reference objects (up to 10).</string>
     <string name="measurement_phase_title">Measure</string>
+    <string name="slide4_heading">Other Measurement Options</string>
+    <string name="slide4_text">Choose different measurement options via the floating button in the bottom right. You can measure length of lines and areas of circles, triangles and tetragons.</string>
 </resources>
